--- a/felix-portfolio-final.html
+++ b/felix-portfolio-final.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, initial-scale=1.0, user-scalable=yes">
     <title>Felix - Solidity Developer Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23627eea;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2300d4aa;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' fill='%230a0a0a'/%3E%3Ctext x='15' y='70' font-family='Arial Black' font-size='65' font-weight='900' fill='url(%23grad)'%3EF%3C/text%3E%3Cpath d='M 65,25 L 50,45 L 65,65 L 80,45 Z' fill='%23627eea' opacity='0.8'/%3E%3Cpath d='M 65,45 L 50,65 L 65,75 L 80,65 Z' fill='%2300d4aa' opacity='0.6'/%3E%3C/svg%3E">
     <style>
