--- a/felix-portfolio-final.html
+++ b/felix-portfolio-final.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1200, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Felix - Solidity Developer Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23627eea;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2300d4aa;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' fill='%230a0a0a'/%3E%3Ctext x='15' y='70' font-family='Arial Black' font-size='65' font-weight='900' fill='url(%23grad)'%3EF%3C/text%3E%3Cpath d='M 65,25 L 50,45 L 65,65 L 80,45 Z' fill='%23627eea' opacity='0.8'/%3E%3Cpath d='M 65,45 L 50,65 L 65,75 L 80,65 Z' fill='%2300d4aa' opacity='0.6'/%3E%3C/svg%3E">
     <style>
@@ -121,6 +121,7 @@
             width: 35px;
             height: 35px;
             position: relative;
+            animation: rotate3d 4s linear infinite;
         }
 
         .logo-icon::before,
@@ -148,6 +149,11 @@
             border-right: 17.5px solid transparent;
             border-top: 17.5px solid var(--secondary);
         }
+        @keyframes rotate3d {
+    0% { transform: rotateY(0deg) rotateX(0deg); }
+    50% { transform: rotateY(180deg) rotateX(10deg); }
+    100% { transform: rotateY(360deg) rotateX(0deg); }
+}
 
         nav ul {
             display: flex;
@@ -415,7 +421,7 @@
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
-            border-radius: 8px;
+            border-radius: 15px;
             position: relative;
             overflow: hidden;
         }
@@ -544,6 +550,73 @@
             font-size: 1.2rem;
             color: var(--text-dim);
         }
+        .section-divider {
+    width: 100%;
+    height: 150px;
+    position: relative;
+    margin: 4rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.divider-line {
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(90deg, transparent, var(--primary), var(--secondary), transparent);
+    animation: pulse-line 3s ease-in-out infinite;
+}
+
+@keyframes pulse-line {
+    0%, 100% { opacity: 0.3; }
+    50% { opacity: 1; }
+}
+
+.divider-eth {
+    position: relative;
+    width: 60px;
+    height: 80px;
+    background: var(--darker);
+    padding: 1rem;
+    z-index: 2;
+    transform-style: preserve-3d;
+    animation: rotate3dDivider 6s linear infinite;
+}
+
+@keyframes rotate3dDivider {
+    0% { transform: rotateY(0deg); }
+    100% { transform: rotateY(360deg); }
+}
+
+.divider-eth::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 30px solid var(--primary);
+    filter: drop-shadow(0 0 15px var(--primary));
+}
+
+.divider-eth::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 30px solid var(--secondary);
+    filter: drop-shadow(0 0 15px var(--secondary));
+}
 
         .skills-grid {
             display: grid;
@@ -1131,6 +1204,10 @@
             </div>
         </div>
     </section>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
 
     <section id="about">
         <div class="section-header reveal">
@@ -1146,6 +1223,10 @@
             </p>
         </div>
     </section>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
 
     <section id="skills">
         <div class="section-header reveal">
@@ -1221,6 +1302,10 @@
             </div>
         </div>
     </section>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
 
     <section id="projects">
         <div class="section-header reveal">
@@ -1302,6 +1387,14 @@
             </div>
         </div>
     </section>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
 
     <section id="articles">
         <div class="section-header reveal">
@@ -1335,6 +1428,10 @@
             </div>
         </div>
     </section>
+    <div class="section-divider">
+    <div class="divider-line"></div>
+    <div class="divider-eth"></div>
+</div>
 
     <section id="contact">
         <div class="contact-wrapper">
