--- a/felix-portfolio-final.html
+++ b/felix-portfolio-final.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, initial-scale=1.0, user-scalable=yes">
     <title>Felix - Solidity Developer Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23627eea;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2300d4aa;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' fill='%230a0a0a'/%3E%3Ctext x='15' y='70' font-family='Arial Black' font-size='65' font-weight='900' fill='url(%23grad)'%3EF%3C/text%3E%3Cpath d='M 65,25 L 50,45 L 65,65 L 80,45 Z' fill='%23627eea' opacity='0.8'/%3E%3Cpath d='M 65,45 L 50,65 L 65,75 L 80,65 Z' fill='%2300d4aa' opacity='0.6'/%3E%3C/svg%3E">
     <style>
@@ -1023,483 +1023,33 @@
             }
         }
 
-        @media (max-width: 1400px) {
-            .hero {
-                padding: 0 4%;
-            }
-            
-            .hero h1 {
-                font-size: 4rem;
-            }
-
-            .eth-logo-container {
-                width: 380px;
-                height: 380px;
-            }
-        }
-
-        @media (max-width: 1200px) {
-            .hero h1 {
-                font-size: 3.5rem;
-            }
-
-            .hero h2 {
-                font-size: 1.6rem;
-            }
-
-            .eth-logo-container {
-                width: 350px;
-                height: 350px;
-            }
-
-            .eth-face.front {
-                border-left: 120px solid transparent;
-                border-right: 120px solid transparent;
-                border-bottom: 180px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 120px solid transparent;
-                border-right: 120px solid transparent;
-                border-top: 180px solid var(--secondary);
-            }
-        }
-
-        @media (max-width: 1024px) {
-            .contact-content {
-                grid-template-columns: 1fr;
-            }
-
-            nav ul {
-                gap: 2rem;
-            }
-
-            .hero {
-                gap: 3rem;
-                padding: 0 4%;
-            }
-
-            .hero-content {
-                max-width: 55%;
-            }
-
-            .hero-visual {
-                width: 45%;
-            }
-
-            .eth-logo-container {
-                width: 320px;
-                height: 320px;
-            }
-
-            .eth-face.front {
-                border-left: 110px solid transparent;
-                border-right: 110px solid transparent;
-                border-bottom: 165px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 110px solid transparent;
-                border-right: 110px solid transparent;
-                border-top: 165px solid var(--secondary);
-            }
-        }
-
-        @media (max-width: 900px) {
-            nav ul {
-                position: fixed;
-                top: 0;
-                right: -100%;
-                width: 70%;
-                max-width: 300px;
-                height: 100vh;
-                background: rgba(10, 10, 10, 0.98);
-                backdrop-filter: blur(20px);
-                flex-direction: column;
-                padding: 6rem 2rem;
-                gap: 2rem;
-                transition: right 0.4s ease;
-                border-left: 1px solid var(--border);
-                z-index: 999;
-            }
-
-            nav ul.active {
-                right: 0;
-            }
-
-            .hamburger {
-                display: flex;
-            }
-
-            .hero {
-                gap: 2rem;
-            }
-
-            .hero-content {
-                max-width: 52%;
-            }
-
-            .hero-visual {
-                width: 48%;
-            }
-
-            .hero h1 {
-                font-size: 3rem;
-            }
-
-            .hero h2 {
-                font-size: 1.4rem;
-            }
-
-            .hero p {
-                font-size: 1.1rem;
-            }
-
-            .eth-logo-container {
-                width: 280px;
-                height: 280px;
-            }
-
-            .eth-face.front {
-                border-left: 95px solid transparent;
-                border-right: 95px solid transparent;
-                border-bottom: 145px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 95px solid transparent;
-                border-right: 95px solid transparent;
-                border-top: 145px solid var(--secondary);
-            }
-
-            .section-title {
-                font-size: 2.8rem;
-            }
-
-            .skills-grid,
-            .projects-grid,
-            .articles-grid {
-                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            }
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                padding: 1rem 4%;
-            }
-
-            .logo {
-                font-size: 1.4rem;
-            }
-
-            .logo-icon {
-                width: 30px;
-                height: 30px;
-            }
-
-            section {
-                padding: 6rem 4%;
-            }
-
-            .hero {
-                min-height: auto;
-                padding-top: 6rem;
-                padding-bottom: 4rem;
-                gap: 2rem;
-            }
-
-            .hero-content {
-                max-width: 50%;
-            }
-
-            .hero-visual {
-                width: 50%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .eth-logo-container {
-                width: 240px;
-                height: 240px;
-            }
-
-            .eth-face.front {
-                border-left: 80px solid transparent;
-                border-right: 80px solid transparent;
-                border-bottom: 120px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 80px solid transparent;
-                border-right: 80px solid transparent;
-                border-top: 120px solid var(--secondary);
-            }
-
-            .hero-tag {
-                font-size: 0.75rem;
-                padding: 0.5rem 1rem;
-            }
-
-            .hero h1 {
-                font-size: 2.2rem;
-                margin-bottom: 1rem;
-            }
-
-            .hero h2 {
-                font-size: 1.1rem;
-                margin-bottom: 1rem;
-            }
-
-            .hero p {
-                font-size: 0.95rem;
-                margin-bottom: 2rem;
-            }
-
-            .cta-group {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .btn {
-                padding: 0.9rem 1.8rem;
-                font-size: 0.95rem;
-            }
-
-            .section-title {
-                font-size: 2.2rem;
-            }
-
-            .section-subtitle {
-                font-size: 1rem;
-            }
-
-            #about p {
-                font-size: 1rem !important;
-            }
-
-            .skills-grid,
-            .projects-grid,
-            .articles-grid {
-                grid-template-columns: 1fr;
-                gap: 1.5rem;
-            }
-
-            .skill-card,
-            .project-card,
-            .article-card {
-                padding: 2rem;
-            }
-        }
-
-        @media (max-width: 600px) {
-            .hero {
-                padding-top: 5rem;
-            }
-
-            .hero-content {
-                max-width: 48%;
-            }
-
-            .hero-visual {
-                width: 52%;
-            }
-
-            .eth-logo-container {
-                width: 200px;
-                height: 200px;
-            }
-
-            .eth-face.front {
-                border-left: 65px solid transparent;
-                border-right: 65px solid transparent;
-                border-bottom: 100px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 65px solid transparent;
-                border-right: 65px solid transparent;
-                border-top: 100px solid var(--secondary);
-            }
-
-            .hero h1 {
-                font-size: 1.8rem;
-            }
-
-            .hero h2 {
-                font-size: 0.95rem;
-            }
-
-            .hero p {
-                font-size: 0.85rem;
-                line-height: 1.6;
-            }
-
-            .hero-tag {
-                font-size: 0.7rem;
-                padding: 0.4rem 0.8rem;
-            }
-
-            .btn {
-                padding: 0.8rem 1.5rem;
-                font-size: 0.9rem;
-            }
-
-            .section-title {
-                font-size: 1.8rem;
-            }
-
-            .contact-form {
-                padding: 2rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            nav {
-                padding: 0.9rem 3%;
-            }
-
-            nav ul {
-                width: 75%;
-            }
-
-            section {
-                padding: 5rem 3%;
-            }
-
-            .hero {
-                padding-left: 3%;
-                padding-right: 3%;
-                padding-top: 4.5rem;
-            }
-
-            .hero-content {
-                max-width: 47%;
-            }
-
-            .hero-visual {
-                width: 53%;
-            }
-
-            .eth-logo-container {
-                width: 170px;
-                height: 170px;
-            }
-
-            .eth-face.front {
-                border-left: 55px solid transparent;
-                border-right: 55px solid transparent;
-                border-bottom: 85px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 55px solid transparent;
-                border-right: 55px solid transparent;
-                border-top: 85px solid var(--secondary);
-            }
-
-            .hero h1 {
-                font-size: 1.5rem;
-            }
-
-            .hero h2 {
-                font-size: 0.85rem;
-            }
-
-            .hero p {
-                font-size: 0.8rem;
-                line-height: 1.5;
-            }
-
-            .hero-tag {
-                font-size: 0.65rem;
-                padding: 0.35rem 0.7rem;
-                margin-bottom: 1rem;
-            }
-
-            .btn {
-                padding: 0.75rem 1.3rem;
-                font-size: 0.85rem;
-            }
-
-            .section-title {
-                font-size: 1.6rem;
-            }
-
-            .section-subtitle {
-                font-size: 0.9rem;
-            }
-
-            #about p {
-                font-size: 0.95rem !important;
-            }
-
-            .skill-card h3,
-            .project-card h3,
-            .article-card h3 {
-                font-size: 1.3rem;
-            }
-
-            .skill-card p,
-            .project-card p,
-            .article-card p {
-                font-size: 0.95rem;
-            }
-
-            .tag {
-                font-size: 0.75rem;
-                padding: 0.4rem 0.8rem;
-            }
-
-            .social-link {
-                width: 50px;
-                height: 50px;
-                font-size: 1.5rem;
-            }
-        }
-
-        @media (max-width: 380px) {
-            .hero-content {
-                max-width: 46%;
-            }
-
-            .hero-visual {
-                width: 54%;
-            }
-
-            .eth-logo-container {
-                width: 150px;
-                height: 150px;
-            }
-
-            .eth-face.front {
-                border-left: 48px solid transparent;
-                border-right: 48px solid transparent;
-                border-bottom: 75px solid var(--primary);
-            }
-
-            .eth-face.back {
-                border-left: 48px solid transparent;
-                border-right: 48px solid transparent;
-                border-top: 75px solid var(--secondary);
-            }
-
-            .hero h1 {
-                font-size: 1.3rem;
-            }
-
-            .hero h2 {
-                font-size: 0.75rem;
-            }
-
-            .hero p {
-                font-size: 0.75rem;
-            }
-
-            .logo {
-                font-size: 1.2rem;
-            }
-        }
+        
+
+@media (max-width: 900px) {
+    nav ul {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 280px;
+        height: 100vh;
+        background: rgba(10, 10, 10, 0.98);
+        backdrop-filter: blur(20px);
+        flex-direction: column;
+        padding: 5rem 2rem;
+        gap: 2rem;
+        transition: right 0.4s ease;
+        border-left: 1px solid var(--border);
+        z-index: 999;
+    }
+
+    nav ul.active {
+        right: 0;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+}
 
         .reveal {
             opacity: 0;
